# Brain-Tumor-Detection

./: README.md  pyproject.toml
src/brain_tumor_detection/: __init__.py  config.py  data.py  evaluate.py  model.py  train.py  utils.py
tests/: __init__.py  test_imports.py  test_model_forward.py
